--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,33 @@ frontend/.env.test.local
 frontend/.env.production.local
 
 .DS_Store
+
+# Ignore bundler config.
+backend/.bundle
+
+# Ignore the default SQLite database.
+backend/db/*.sqlite3
+backend/db/*.sqlite3-*
+
+# Ignore all logfiles and tempfiles.
+backend/log/*
+backend/tmp/*
+!backend/log/.keep
+!backend/tmp/.keep
+
+# Ignore pidfiles, but keep the directory.
+backend/tmp/pids/*
+!backend/tmp/pids/
+!backend/tmp/pids/.keep
+
+# Ignore uploaded files in development.
+backend/storage/*
+!backend/storage/.keep
+backend/tmp/storage/*
+!backend/tmp/storage/
+!backend/tmp/storage/.keep
+
+backend/public/assets
+
+# Ignore master key for decrypting credentials and more.
+backend/config/master.key
