--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -24,6 +24,7 @@ gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
 
 gem "devise"
+gem "devise_token_auth"
 gem "stripe"
 gem "dotenv-rails", groups: [ :development, :test ]
 
@@ -31,7 +32,7 @@ gem "dotenv-rails", groups: [ :development, :test ]
 # gem "image_processing", "~> 1.2"
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
-# gem "rack-cors"
+gem "rack-cors"
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
