--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ frontend/.next/
 frontend/out/
 
 # Optional: Environment files
+frontend/.env
 frontend/.env.local
 frontend/.env.development.local
 frontend/.env.test.local
@@ -13,6 +14,8 @@ frontend/.env.production.local
 
 .DS_Store
 
+backend/.DS_Store
+backend/.env
 # Ignore bundler config.
 backend/.bundle
 
