--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-table": "^7.8.0",
     "reactflow": "^11.10.1",
     "zustand": "^4.5.0"
   },
@@ -29,6 +30,7 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-table": "^7.7.20",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
