--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+production.env
+
+# Keep example files
+!.env.example
+
 # Node.js dependencies for the frontend
 frontend/node_modules/
 
