--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,16 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.2.5",
     "@stripe/stripe-js": "^6.1.0",
+    "@types/react-helmet": "^6.1.11",
+    "@types/react-select": "^5.0.0",
     "axios": "^1.8.4",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "react-table": "^7.8.0",
     "reactflow": "^11.10.1",
     "zustand": "^4.5.0"
